[package]
name = "enrollment_dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.3"
bs58 = "0.5.1"
idlgen = { git = "https://github.com/deanmlittle/idlgen", version = "0.1.0" }
solana-client = "2.1.7"
solana-program = "2.1.7"
solana-sdk = "2.1.7"
# solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }